With Nodes and Components

--- a/app/modules/editor/partials/editor.jade
+++ b/app/modules/editor/partials/editor.jade
@@ -1,36 +1,18 @@
-script.
-  function blocklyLoaded(blockly) {
-    console.log("blocklyLoaded()", blockly);
-    // Called once Blockly is fully loaded.
-    window.Blockly = blockly;
-  }
+#editor
+  .container-fluid
+    .row-fluid.row-toolbar-offcanvas.row-toolbar-offcanvas-left#editor-main
 
-#editor(ng-controller="EditorCtrl")
+      .col-sm-2.col-xs-1.toolbar-offcanvas.pull-left#editor-toolbar(ui-view="components")
 
-  .row#editor-toolbar
-    .navbar.navbar-default#editor-toolbar-menu(role="navigation", style="padding-left: 8px; margin-bottom: 8px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="save()")
-        span.text-muted.cic.cic-save(style="font-size: 16px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="refresh()")
-        span.text-muted.cic.cic-refresh(style="font-size: 16px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="preview()")
-        span.text-muted.cic.cic-preview(style="font-size: 18px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="rebuild()")
-        span.text-muted.cic.cic-uniF002(style="font-size: 18px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="alert()")
-        span.text-muted.cic.cic-form(style="font-size: 18px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="choose()")
-        span.text-muted.cic.cic-list-alt(style="font-size: 18px;")
-      button.btn.btn-default.navbar-btn(type="button", ng-click="quickForm()")
-        span.text-muted.cic.cic-fastforward(style="font-size: 18px;")
-
-  .row#editor-main
-    iframe(src="/partials/editor.frame.html")
+      .col-sm-10.col-xs-11#editor-content(ui-view="nodes")
 
 script.
   function resize_now() {
     var h = $(window).height();
-    $('#editor-main').height(h - 164);
+    $('#editor-toolbar').height(h - 104);
+    $('#editor-main').height(h - 92);
+    $('#editor-content-main').height(h - 168);
+    $('#editor-preview-main').height(h - 168);
   };
 
   $(document).ready(function() {
