--- a/app/modules/editor/styles/editor.less
+++ b/app/modules/editor/styles/editor.less
@@ -1,4 +1,7 @@
+@import "editor.component.less";
+@import "editor.node.less";
 @import "editor.preview.less";
+@import "editor.dragdrop.less";
 
 #editor {
 }
